--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
 bertopic==0.9.4
+gensim==3.6.0
+matplotlib==3.2.2
 nltk==3.2.5
 numpy==1.21.5
 pandas==1.3.5
 Pillow==9.0.1
 pycocotools==2.0.4
+scikit_learn==1.0.2
+sentence_transformers==2.2.0
+stop_words==2018.7.23
 torch==1.10.0+cu111
 torchvision==0.11.1+cu111
+umap==0.1.1
